unit2Classes-master/Chapter 3 Practice/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.8.0_45\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.8.2.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\krkoepcke\Desktop\GitHub\unit2Classes\Chapter 3 Practice
-d
C:\Users\krkoepcke\Desktop\GitHub\unit2Classes\Chapter 3 Practice\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\krkoepcke\Desktop\GitHub\unit2Classes\Chapter 3 Practice\Door.java
<---- end of javadoc command ---->
Loading source file C:\Users\krkoepcke\Desktop\GitHub\unit2Classes\Chapter 3 Practice\Door.java...
C:\Users\krkoepcke\Desktop\GitHub\unit2Classes\Chapter 3 Practice\Door.java:75: error: class, interface, or enum expected
    public String getName()
           ^
C:\Users\krkoepcke\Desktop\GitHub\unit2Classes\Chapter 3 Practice\Door.java:78: error: class, interface, or enum expected
    }
    ^
C:\Users\krkoepcke\Desktop\GitHub\unit2Classes\Chapter 3 Practice\Door.java:81: error: class, interface, or enum expected
    public void setName(String newName)
           ^
C:\Users\krkoepcke\Desktop\GitHub\unit2Classes\Chapter 3 Practice\Door.java:84: error: class, interface, or enum expected
    }
    ^
4 errors
